# serverless-file-upload

./: pyproject.toml  template.yaml
serverless_file_upload/: app.py
serverless_file_upload/src/: read.py  upload.py
